--- a/index.ipynb
+++ b/index.ipynb
@@ -48,13 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Import sqlite3, then create the SQL database/connect to it (creating the database connection will create a DB)"
+    "# Import sqlite3, then create the SQL database/connect to it (creating the database connection will create a DB)\n",
+    "import sqlite3\n",
+    "connection = sqlite3.connect('planets.db')\n",
+    "cursor = connection.cursor()\n",
+    "\n"
    ]
   },
   {
@@ -118,13 +120,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; create the table as described above."
+    "#Your code here; create the table as described above.\n",
+    "cursor.execute('''CREATE TABLE planets(id INTEGER PRIMARY KEY, name TEXT, color TEXT, num_of_moons INTEGER, mass REAL)''')\n",
+    "\n"
    ]
   },
   {
@@ -143,13 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code for reading and executing alter.sql"
+    "# Your code for reading and executing alter.sql\n",
+    "cursor.execute('''ALTER TABLE planets ADD COLUMN rings BOOLEAN;''')\n"
    ]
   },
   {
@@ -191,14 +214,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; add data to the table"
+    "#Your code here; add data to the table\n",
+    "\n",
+    "cursor.execute('''INSERT INTO planets(name, color, num_of_moons, mass, rings) VALUES ('Mercury', 'gray', 0, 0.55, 0);''')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO planets(name, color, num_of_moons, mass, rings) VALUES ('Venus', 'yellow', 0, 0.82, 0);''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO planets(name, color, num_of_moons, mass, rings) VALUES ('Earth', 'blue', 1, 1.00, 0);''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO planets(name, color, num_of_moons, mass, rings) VALUES ('Mars', 'red', 2, 0.11, 0);''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO planets(name, color, num_of_moons, mass, rings) VALUES ('Jupiter', 'orange', 53, 317.90, 0);''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO planets(name, color, num_of_moons, mass, rings) VALUES ('Saturn', 'hazel', 62, 95.19, 1);''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO planets(name, color, num_of_moons, mass, rings) VALUES (\"Uranus\", \"light blue\", 27, 14.54, 1);''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO planets(name, color, num_of_moons, mass, rings) VALUES (\"Neptune\",\"dark blue\", 14, 17.15, 1);''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''INSERT INTO planets(name, color, num_of_moons, mass, rings) VALUES (\"Pluto\", \"brown\", 5, 0.003, 0);''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -213,13 +414,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code to update the table"
+    "# Your code to update the table\n",
+    "cursor.execute('''UPDATE planets SET num_of_moons = 68 WHERE name = \"Jupiter\";''')\n"
    ]
   },
   {
@@ -238,13 +449,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f23053c2110>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code to delete pluto here"
+    "# Your code to delete pluto here\n",
+    "cursor.execute('''DELETE FROM planets where name = \"Pluto\";''')\n"
    ]
   },
   {
@@ -290,10 +511,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -301,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -379,34 +598,66 @@
        "      <td>317.90</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Saturn</td>\n",
+       "      <td>hazel</td>\n",
+       "      <td>62</td>\n",
+       "      <td>95.19</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Uranus</td>\n",
+       "      <td>light blue</td>\n",
+       "      <td>27</td>\n",
+       "      <td>14.54</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Neptune</td>\n",
+       "      <td>dark blue</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17.15</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id     name   color  num_of_moons    mass  rings\n",
-       "0   1  Mercury    gray             0    0.55      0\n",
-       "1   2    Venus  yellow             0    0.82      0\n",
-       "2   3    Earth    blue             1    1.00      0\n",
-       "3   4     Mars     red             2    0.11      0\n",
-       "4   5  Jupiter  orange            68  317.90      0"
+       "   id     name       color  num_of_moons    mass  rings\n",
+       "0   1  Mercury        gray             0    0.55      0\n",
+       "1   2    Venus      yellow             0    0.82      0\n",
+       "2   3    Earth        blue             1    1.00      0\n",
+       "3   4     Mars         red             2    0.11      0\n",
+       "4   5  Jupiter      orange            68  317.90      0\n",
+       "5   6   Saturn       hazel            62   95.19      1\n",
+       "6   7   Uranus  light blue            27   14.54      1\n",
+       "7   8  Neptune   dark blue            14   17.15      1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Demonstrating running a query and previewing results as pandas DataFrame\n",
-    "results = cur.execute(\"\"\"select * from planets;\"\"\").fetchall()\n",
+    "results = cursor.execute(\"\"\"select * from planets;\"\"\").fetchall()\n",
     "\n",
     "#Alternatively we could do this in two steps:\n",
     "#cur.execute(\"\"\"select * from planets;\"\"\")\n",
     "#results = cur.fetchall()\n",
     "df = pd.DataFrame(results)\n",
-    "df. columns = [i[0] for i in cur.description]\n",
-    "df.head()"
+    "df. columns = [i[0] for i in cursor.description]\n",
+    "df\n",
+    "\n",
+    "# what does i[0] for i in cursor.description mean?"
    ]
   },
   {
@@ -418,13 +669,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def sql_select_to_df(SQL_COMMAND, cur=cur):\n",
+    "def sql_select_to_df(SQL_COMMAND, cur=cursor):\n",
     "    results = cur.execute(SQL_COMMAND).fetchall()\n",
     "    df = pd.DataFrame(results)\n",
     "    df.columns = [i[0] for i in cur.description]\n",
@@ -433,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +773,7 @@
        "4   5  Jupiter  orange            68  317.90      0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -635,13 +884,14 @@
        "7  Neptune   dark blue"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "sql_select_to_df(\"\"\"select name, color from planets;\"\"\")\n"
    ]
   },
   {
@@ -653,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -734,13 +984,14 @@
        "3   8  Neptune   dark blue            14   17.15      1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "sql_select_to_df('''select * from planets where mass>1;''')\n"
    ]
   },
   {
@@ -752,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -813,13 +1064,14 @@
        "3     Mars  0.11"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "sql_select_to_df('''select name, mass from planets where mass <= 1;''')\n"
    ]
   },
   {
@@ -831,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -892,13 +1144,14 @@
        "3  Neptune   dark blue"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "sql_select_to_df('''select name, color from planets where num_of_moons>10;''')\n"
    ]
   },
   {
@@ -910,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -945,15 +1198,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>4</td>\n",
        "      <td>Mars</td>\n",
        "      <td>red</td>\n",
@@ -966,18 +1210,18 @@
        "</div>"
       ],
       "text/plain": [
-       "   id   name color  num_of_moons  mass  rings\n",
-       "0   3  Earth  blue             1  1.00      0\n",
-       "1   4   Mars   red             2  0.11      0"
+       "   id  name color  num_of_moons  mass  rings\n",
+       "0   4  Mars   red             2  0.11      0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "sql_select_to_df('''select * from planets where num_of_moons >= 1 and mass<1;''')\n"
    ]
   },
   {
@@ -989,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1044,13 +1288,14 @@
        "2  Neptune   dark blue"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "sql_select_to_df('''select name, color from planets where color='blue' OR color='light blue' OR color='dark blue';''')\n"
    ]
   },
   {
@@ -1084,7 +1329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
